2002-07-16  Sam Steingold  <sds@gnu.org>

	* misc.d (GETENV): return all the environment as an alist when
	the argument is NIL

2002-07-15  Bruno Haible  <bruno@clisp.org>

	* unix.d (fstatfs): Remove unused declaration.

	* makemake.in (lisp.a): Adapt to gcc-3.1; its libgcc.a contains *.oS,
	not *.o.

	* spvw_sigsegv.d (stackoverflow_handler): Add support for FreeBSD.

	* io.d (right_margin): Avoid gcc warning when compiling with -DWIDE.

	* lispbibl.d (copy_mem_o): Fix parentheses.
	(UNIX_HURD): Renamed from UNIX_GNU.
	(UNIX_GNU): New macro.
	(_REENTRANT): Use for UNIX_GNU, not only UNIX_LINUX.
	(setjmp, longjmp): Treat UNIX_GNU like UNIX_LINUX.

2002-07-15  Sam Steingold  <sds@gnu.org>

	check for OpenLDAP
	* m4/ldap.m4: new file
	* unixconf.h.in (HAVE_LDAP_H): undef
	* configure.in (CL_LDAP): call

2002-07-15  Sam Steingold  <sds@gnu.org>

	fallout of 2002-07-09 parse-namestring patch in ANSI mode
	* pathname.d (test_default_pathname): treat NIL as unbound,
	permitting (parse-namestring "foo" nil nil ...) again
	* compiler.lisp (compile-file-pathname-helper): do not pass
	NIL as the :DEFAULTS to MAKE-PATHNAME

2002-07-15  Sam Steingold  <sds@gnu.org>

	* configure: user-specified options (like --with-noreadline)
	override the default/inferred options

2002-07-15  Sam Steingold  <sds@gnu.org>

	* pathname.d (wildcard_match): handle special patterns like
	:WILD, :WILD-INFERIORS, :UP and :BACK

2002-07-15  Sam Steingold  <sds@gnu.org>

	fixed bug [ 581646 ]: REQUIRE uses STRING-EQUAL
	since CLISP in ANSI mode does not coerce symbols to pathnames,
	this also fixes a bug introduced on 2002-07-09 which precluded
	symbols as module names
	* defs1.lisp (module-name): new function
	(provide, require): use it to convert module name to a string
	* compiler (c-PROVIDE, c-REQUIRE): ditto
	(require, c-REQUIRE): use STRING= instead of STRING-EQUAL

2002-07-15  Sam Steingold  <sds@gnu.org>

	* _distmakefile (clisp): new target for installing locally
